testdata/baselines/reference/submodule/compiler/unusedTypeParameters10.errors.txt
unusedTypeParameters10.ts(1,11): error TS6196: 'T' is declared but never used.


==== unusedTypeParameters10.ts (1 errors) ====
    type Alias<T> = { };
              ~~~
!!! error TS6196: 'T' is declared but never used.
    type Alias2<T> = { x: T };
    